@@ -1,0 +1,2 @@
+prog: cdsg
+vgopts: -q
