@@ -1,0 +1,14 @@
+before op1 = (0x44556677, 0x111111118899aabb)
+before op2 =  0x445566778899aabb
+before op3 = (0xdeadbeefdeadbabe, 0xdeadbeefdeadbabe)
+after  op1 = (0x44556677, 0x111111118899aabb)
+after  op2 = 0xdeadbabedeadbabe
+after  op3 = (0xdeadbeefdeadbabe, 0xdeadbeefdeadbabe)
+cc = 0
+before op1 = (0x1000000000000000, 0)
+before op2 =  0x8000000000000001
+before op3 = (0xdeadbeefdeadbabe, 0xdeadbeefdeadbabe)
+after  op1 = (0x1000000080000000, 0x1)
+after  op2 = 0x8000000000000001
+after  op3 = (0xdeadbeefdeadbabe, 0xdeadbeefdeadbabe)
+cc = 1
